--- a/lab2/Lab02_solution.ipynb
+++ b/lab2/Lab02_solution.ipynb
@@ -315,9 +315,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "litl",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "litl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -329,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
